refactor: remove unused methods